Starting Point Achieved!

--- a/LendingGitWorkshop/LendingGitWorkshop/LendingGitWorkshop.csproj
+++ b/LendingGitWorkshop/LendingGitWorkshop/LendingGitWorkshop.csproj
@@ -61,6 +61,12 @@
     <None Include="App.config" />
     <None Include="packages.config" />
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\SupportClasses\SupportClasses.csproj">
+      <Project>{C8BE695B-B3BB-4574-9009-5E0F84C7B6A6}</Project>
+      <Name>SupportClasses</Name>
+    </ProjectReference>
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
