--- a/LendingGitWorkshop/SupportClasses/SupportClasses.csproj
+++ b/LendingGitWorkshop/SupportClasses/SupportClasses.csproj
@@ -44,6 +44,7 @@
     <Compile Include="GridCreator.cs" />
     <Compile Include="IGridCreator.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Vertex.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
